[user-service] fix